added a explanation for the nav bar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCtype html>
-<htnl lang="en">
+<html lang="en">
 
     <head>
         <title>how to use flex</title>
@@ -9,8 +9,10 @@
     <body>
 
         <h1> how to use flex and peseudo classes </h1>
-        <p>im going to show how to use flex first. this my first example of flex</p>
-        <p>i did this by making 3 divs as you with the boxes then in the external css i did </p>
+        <p>im going to show how to use flex first. this my first example of flex and for flex which typed in #boxes</p>
+        <p>i did this by making 3 divs as you with the boxes then in the external css i did  made two delcartion one for the background </p>
+        <p>and the other delctarion type in the same just with a >div to affect all the divs and added color and choose the height and width </p>
+    
 
         <div id="boxes">
             <div>box 1</div>
@@ -37,4 +39,4 @@
                 now this <input type="text" name="nowthis"><br>
             </form>
     </body>
-</htnl>
+</html>
